# labbridger

./: .gitignore  Cargo.toml  README.md  config.yaml.example  docker-compose.yaml  rust-server.service
mock-ollama/: Dockerfile  mock_ollama.py
src/: app_config.rs  auth.rs  main.rs  network_scanner.rs  relay.rs  relay_probe.rs  shelly.rs  target_monitor.rs  target_probeable.rs  target_startable.rs  target_starter.rs  target_status.rs  target_stoppable.rs  target_stopper.rs  wol.rs
