[package]
name = "labbridger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
surge-ping = "0.8.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", features = ["yaml"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
futures-util = "0.3"
bcrypt = "0.15"
rand = "0.8"
